[gd_scene load_steps=7 format=2]

[ext_resource path="res://MiSans/MiSans-Normal.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://mianFunction/plosition_card/add_position_record.gd" type="Script" id=3]
[ext_resource path="res://tools/cat_tool.tscn" type="PackedScene" id=4]
[ext_resource path="res://tools/place_tool.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 2 )

[node name="WindowDialog" type="WindowDialog"]
margin_right = 705.0
margin_bottom = 273.0
size_flags_vertical = 0
popup_exclusive = true
window_title = "添加打卡记录"
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 0.989
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -0.244995
margin_bottom = -44.0

[node name="cat_id" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 689.0
margin_bottom = 47.0
size_flags_horizontal = 7

[node name="Label" type="Label" parent="VBoxContainer/cat_id"]
margin_right = 342.0
margin_bottom = 47.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "猫咪"
align = 1
valign = 1

[node name="Label2" type="OptionButton" parent="VBoxContainer/cat_id"]
margin_left = 346.0
margin_right = 689.0
margin_bottom = 47.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = SubResource( 2 )
text = "default_name"
align = 1

[node name="place_name" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 51.0
margin_right = 689.0
margin_bottom = 98.0
size_flags_horizontal = 7

[node name="Label" type="Label" parent="VBoxContainer/place_name"]
margin_right = 342.0
margin_bottom = 47.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "地点"
align = 1
valign = 1

[node name="Label2" type="OptionButton" parent="VBoxContainer/place_name"]
margin_left = 346.0
margin_right = 689.0
margin_bottom = 47.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = SubResource( 2 )
text = "default_id"
align = 1

[node name="feed_food" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 102.0
margin_right = 689.0
margin_bottom = 221.0
size_flags_horizontal = 7
size_flags_vertical = 7
size_flags_stretch_ratio = 1.5

[node name="Label" type="Label" parent="VBoxContainer/feed_food"]
margin_right = 342.0
margin_bottom = 41.0
size_flags_horizontal = 7
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
text = "打卡描述"
align = 1

[node name="TextEdit" type="LineEdit" parent="VBoxContainer/feed_food"]
margin_left = 346.0
margin_right = 689.0
margin_bottom = 51.0
size_flags_horizontal = 7
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 328.0
margin_top = 233.0
margin_right = 372.0
margin_bottom = 261.0
mouse_default_cursor_shape = 2
text = "确定"

[node name="AcceptDialog" type="AcceptDialog" parent="."]
margin_right = 96.0
margin_bottom = 74.0
window_title = "提示"

[node name="cat_tool" parent="." instance=ExtResource( 4 )]

[node name="place_tool" parent="." instance=ExtResource( 5 )]

[connection signal="about_to_show" from="." to="." method="_on_WindowDialog_about_to_show"]
[connection signal="resized" from="." to="." method="resize"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="recieved" from="cat_tool" to="." method="_on_cat_tool_recieved"]
[connection signal="recieved" from="place_tool" to="." method="_on_place_tool_recieved"]
